[package]
name = "punctual_sleep"
version = "0.0.1"
authors = ["AngelicosPhosphoros <angelicos.phosphoros@protonmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.9"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.9"
